--- a/Config/Train_Nav_Local.yaml
+++ b/Config/Train_Nav_Local.yaml
@@ -9,16 +9,16 @@ action_out_size: [16]
 env_path: 'C:/Unity Projects/Hide and Seek/Env_Nav/Hide and Seek'
 total_episodes: 30
 max_steps: 50
-resume: False
+resume: True
 checkpoint_to_save: "Checkpoint_Nav_1.pth.tar"
-batch_size: 1
+batch_size: 2
 time_step: 15
 learning_rate: 0.00025
 gamma: 0.99
 initial_epsilon: 1.0
 final_epsilon: 0.1
 epsilon_vanish_rate: 0.9999
-memory_size: 2
+memory_size: 4
 performance_display_interval: 2
 checkpoint_save_interval: 2
 update_freq: 5
