--- a/Config/Train_Nav_Server.yaml
+++ b/Config/Train_Nav_Server.yaml
@@ -1,15 +1,15 @@
-checkpoint_to_load: "Checkpoint_Nav_Human_Play.pth.tar"
+checkpoint_to_load: "Checkpoint_Nav_Human_Play_RL.pth.tar"
 device_idx: [3,4,5,6,7]
-name_tensorboard: "CNN_LSTM_DQN_Nav_RL_Hider"
+name_tensorboard: "CNN_LSTM_DQN_Nav_Human_Play_RL_Hider"
 cnn_out_size: [500]
 atten_size: [15]
 lstm_hidden_size: [512]
 action_shape: [[3,3]]
 action_out_size: [32]
-env_path: '../Env_Nav/Hide and Seek'
-total_episodes: 2000
+env_path: '../Env_Linux_Nav_3_Seekers/Hide and Seek'
+total_episodes: 10000
 max_steps: 100
-resume: False
+resume: True
 checkpoint_to_save: "Checkpoint_Nav_Human_Play_RL.pth.tar"
 batch_size: 25
 time_step: 20
@@ -23,4 +23,4 @@ performance_display_interval: 20
 checkpoint_save_interval: 25
 update_freq: 5
 target_update_freq(steps): 500
-train_from_human_play: True
+train_from_human_play: False
