--- a/Config/Human_Play.yaml
+++ b/Config/Human_Play.yaml
@@ -1,4 +1,8 @@
-env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_1_Seeker/Hide and Seek'
+env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers/Hide and Seek'
+checkpoint_to_load: "Human_play_Nav_2022-10-27_00-39.pth.tar"
+checkpoint_save_name: "Human_play_Nav"
+id_to_name: {1: 'Hider 0'}
 total_episodes: 100
 max_steps: 300
-device_idx: [0]
+device_idx: 0
+hostname: 'localhost'
