--- a/Config/Human_Play.yaml
+++ b/Config/Human_Play.yaml
@@ -1,5 +1,5 @@
-env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers/Hide and Seek'
-checkpoint_to_load: "Human_play_Nav_2022-10-27_00-39.pth.tar"
+env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers_Human_Player/Hide and Seek'
+checkpoint_to_load:
 checkpoint_save_name: "Human_play_Nav"
 id_to_name: {1: 'Hider 0'}
 total_episodes: 100
