--- a/Config/Train.yaml
+++ b/Config/Train.yaml
@@ -1,27 +1,26 @@
-checkpoint_to_load: "Checkpoint_Nav_Human_Play_distributed_RL.pth.tar"
-device_idx: [3,4,5,6,7]
+checkpoint_to_load: "Checkpoint_Nav_Human_Play_Distributed_RL.pth.tar"
+device_idx: [4,5,6,7]
 id_to_name: {1: 'Hider 0'}
-name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider"
+name_tensorboard: "CNN_LSTM_DQN_Nav_Human_Play_Distributed_RL_Hider"
 cnn_out_size: [500]
 atten_size: [15]
 lstm_hidden_size: [512]
 action_shape: [[3,3]]
 action_out_size: [32]
-env_path: '../Env_Linux_Nav_3_Seekers/Hide and Seek'
-total_epochs: 200000
-max_steps: 100
-resume: True
-checkpoint_to_save: "Checkpoint_Nav_Human_Play_distributed_RL.pth.tar"
+env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks/Hide and Seek'
+total_epochs: 20000
+max_steps: 150
+resume: False
+checkpoint_to_save: "Checkpoint_Nav_Human_Play_Distributed_RL.pth.tar"
 batch_size: 25
 time_step: 20
 learning_rate: 0.00025
 gamma: 0.99
 initial_epsilon: 1.0
 final_epsilon: 0.1
-epsilon_vanish_rate: 0.999
-memory_size: 50
+epsilon_vanish_rate: 0.9999
+memory_size: 100
 performance_display_interval: 20
 checkpoint_save_interval: 25
-actor_update_freq(episodes): 2
-target_update_freq(epochs): 500
-train_from_human_play: False
+actor_update_freq(episodes): 10
+target_update_freq(epochs): 50
