--- a/Config/all.conf
+++ b/Config/all.conf
@@ -4,3 +4,5 @@ redis_server="localhost"
 num_actors=4
 first_device=4
 human_play=false
+Train_config="Train.yaml"
+Train_human_play_config="Train_human_play.yaml"
