--- a/Config/Train.yaml
+++ b/Config/Train.yaml
@@ -1,6 +1,6 @@
 checkpoint_to_load: "Checkpoint_Nav_Distributed_RL.pth.tar"
 device_idx: [3,4,5,6,7]
-id_to_name: {1: 'Hider 0'}
+id_to_name: {3: 'Hider 0'}
 name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider"
 cnn_out_size: [500]
 atten_size: [15]
@@ -10,7 +10,7 @@ action_out_size: [32]
 env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks_No_Waiting_Time/Hide and Seek'
 total_epochs: 20000
 max_steps: 150
-resume: True
+resume: False
 checkpoint_to_save: "Checkpoint_Nav_Distributed_RL.pth.tar"
 batch_size: 25
 time_step: 20
