--- a/Config/Test_Nav.yaml
+++ b/Config/Test_Nav.yaml
@@ -1,4 +1,4 @@
-checkpoint_to_load: "Checkpoint_Nav.pth.tar"
+checkpoint_to_load: "Checkpoint_Nav_Distributed_RL.pth.tar"
 device_idx: [0]
 name_tensorboard: "CNN_LSTM_DQN_Nav_Test_Hider"
 cnn_out_size: [500]
@@ -6,6 +6,6 @@ atten_size: [15]
 lstm_hidden_size: [512]
 action_shape: [[3,3]]
 action_out_size: [32]
-env_path: 'C:/Unity Projects/Hide and Seek/Env_Nav/Hide and Seek'
+env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers_Big_Rocks_No_Waiting_Time/Hide and Seek'
 total_episodes: 20
 max_steps: 5000
