--- a/Config/Train_debug.yaml
+++ b/Config/Train_debug.yaml
@@ -1,18 +1,12 @@
-checkpoint_to_load: "Checkpoint_Nav_Human_Play.pth.tar"
+env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers_Big_Rocks_No_Waiting_Time/Hide and Seek'
+checkpoint_to_load: "Checkpoint_Nav_Distributed_RL_Debug.pth.tar"
+checkpoint_to_save: "Checkpoint_Nav_Distributed_RL_Debug.pth.tar"
+name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider_Debug"
+memory_size: 5
 device_idx: [3,4,5,6,7]
-id_to_name: {1: 'Hider 0'}
-name_tensorboard: "CNN_LSTM_DQN_Nav_RL_Hider"
-cnn_out_size: [500]
-atten_size: [2]
-lstm_hidden_size: [512]
-action_shape: [[3,3]]
-action_out_size: [32]
-env_path: '../Env_Linux_Nav_3_Seekers/Hide and Seek'
-total_episodes_each_actor: 200
-total_epochs: 2000
-max_steps: 60
 resume: False
-checkpoint_to_save: "Checkpoint_Nav_Human_Play_RL.pth.tar"
+total_epochs: 200
+max_steps: 130
 batch_size: 2
 time_step: 5
 learning_rate: 0.00025
@@ -20,9 +14,7 @@ gamma: 0.99
 initial_epsilon: 1.0
 final_epsilon: 0.1
 epsilon_vanish_rate: 0.9999
-memory_size: 5
 performance_display_interval(epochs): 5
 checkpoint_save_interval(epochs): 5
 actor_update_freq(epochs): 1
 target_update_freq(epochs): 10
-
