Update run.sh and configs

--- a/Config/Imitation_Learning.conf
+++ b/Config/Imitation_Learning.conf
@@ -5,4 +5,4 @@ num_actors=3
 first_device=5
 human_play=true
 Train_config="Train_after_Human_Play.yaml"
-Train_human_play_config="Train_human_play.yaml"
+Train_human_play_config="Train_Human_Play.yaml"
