--- a/Config/Train_debug.yaml
+++ b/Config/Train_debug.yaml
@@ -1,4 +1,4 @@
-env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers_Big_Rocks_No_Waiting_Time/Hide and Seek'
+env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks_No_Waiting_Time/Hide and Seek'
 checkpoint_to_load: "Checkpoint_Nav_Distributed_RL_Debug.pth.tar"
 checkpoint_to_save: "Checkpoint_Nav_Distributed_RL_Debug.pth.tar"
 name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider_Debug"
@@ -7,7 +7,7 @@ device_idx: [3,4,5,6,7]
 resume: False
 total_epochs: 200
 max_steps: 130
-batch_size: 2
+batch_size: 5
 time_step: 5
 learning_rate: 0.00025
 gamma: 0.99
