Change config files names

--- a/Config/Human_Play.yaml
+++ b/Config/Human_Play.yaml
@@ -1,5 +1,5 @@
 env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers_Human_Player_Big_Rocks_No_Waiting_Time/Hide and Seek'
-checkpoint_to_load:
+checkpoint_to_load: "Human_play_Nav_Big_Rocks_No_Waiting_Time_Darrell.pth.tar"
 checkpoint_save_name: "Human_play_Nav"
 total_episodes: 100
 max_steps: 150
