--- a/Config/Train_Debug.yaml
+++ b/Config/Train_Debug.yaml
@@ -2,13 +2,13 @@ env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks_No_Waiting_Time/Hide and Seek'
 checkpoint_to_load: "Checkpoint_Nav_Distributed_RL_Debug.pth.tar"
 checkpoint_to_save: "Checkpoint_Nav_Distributed_RL_Debug.pth.tar"
 name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider_Debug"
-memory_size: 5
+memory_size: 2
 device_idx: [3,4,5,6,7]
-resume: False
+resume: True
 total_epochs: 200
 max_steps: 130
-batch_size: 5
-time_step: 5
+batch_size: 1
+time_step: 3
 learning_rate: 0.00025
 gamma: 0.99
 initial_epsilon: 1.0
