--- a/Config/Train.yaml
+++ b/Config/Train.yaml
@@ -3,8 +3,8 @@ checkpoint_to_load: "Checkpoint_Nav_Distributed_RL.pth.tar"
 checkpoint_to_save: "Checkpoint_Nav_Distributed_RL.pth.tar"
 name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider"
 memory_size: 100
-device_idx: [3,4,5,6,7]
-resume: False
+device_idx: [4,5,6,7]
+resume: True
 total_epochs: 20000
 max_steps: 100
 batch_size: 25
