Change config files

--- a/Config/Imitation_Learning.conf
+++ b/Config/Imitation_Learning.conf
@@ -1,8 +1,9 @@
 actor=true
 learner=true
 redis_server="localhost"
-num_actors=3
-first_device=5
+num_actors=4
+num_learners=4
+device=-1
 human_play=true
 Train_config="Train_after_Human_Play.yaml"
 Train_human_play_config="Train_Human_Play.yaml"
