--- a/Config/Self_Play.conf
+++ b/Config/Self_Play.conf
@@ -2,7 +2,7 @@ actor=true
 learner=true
 redis_server="localhost"
 num_actors=4
-num_learner=4
+num_learners=4
 device=-1
 human_play=false
 Train_config="Train_Debug.yaml"
