--- a/Config/Train.yaml
+++ b/Config/Train.yaml
@@ -1,14 +1,14 @@
-env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks_No_Waiting_Time/Hide and Seek'
+env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks_No_Waiting_Time'
 checkpoint_to_load: "Checkpoint_Nav_Distributed_RL.pth.tar"
 checkpoint_to_save: "Checkpoint_Nav_Distributed_RL.pth.tar"
 name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider"
-memory_size: 100
+memory_size: 150
 device_idx: [4,5,6,7]
-resume: True
+resume: False
 total_epochs: 20000
 max_steps: 100
 batch_size: 25
-time_step: 20
+time_step: 16
 learning_rate: 0.00025
 gamma: 0.99
 initial_epsilon: 1.0
