--- a/Config/Train.yaml
+++ b/Config/Train.yaml
@@ -9,7 +9,7 @@ total_epochs: 3600
 max_steps: 50
 batch_size: 5
 num_batch_per_learner: 4
-time_step: 8
+sequence_length: 8
 initial_learning_rate: 0.0005
 learning_rate_gamma: 0.2
 learning_rate_step_size: 50
