--- a/Config/Train_Debug.yaml
+++ b/Config/Train_Debug.yaml
@@ -9,7 +9,7 @@ total_epochs: 200
 max_steps: 130
 batch_size: 1
 num_batch_per_learner: 2
-time_step: 3
+sequence_length: 3
 initial_learning_rate: 0.0005
 learning_rate_gamma: 0.2
 learning_rate_step_size: 50
