--- a/Config/Train_Local_Debug.yaml
+++ b/Config/Train_Local_Debug.yaml
@@ -9,7 +9,7 @@ total_epochs: 100
 max_steps: 50
 batch_size: 2
 num_batch_per_learner: 4
-time_step: 4
+sequence_length: 4
 initial_learning_rate: 0.0005
 learning_rate_gamma: 0.2
 learning_rate_step_size: 50
