Update configs for BC

--- a/Config/Train.yaml
+++ b/Config/Train.yaml
@@ -1,23 +1,23 @@
 env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks_No_Waiting_Time'
-checkpoint_to_load: "Checkpoint_Nav_Distributed_RL.pth.tar"
-checkpoint_to_save: "Checkpoint_Nav_Distributed_RL"
-name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider"
-memory_size: 32
-device_idx: [4]
+checkpoint_to_load: "0_Checkpoint_Nav_Distributed_RL_BC_210"
+checkpoint_to_save: "Checkpoint_Nav_Distributed_RL_BC"
+name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider_BC"
+memory_size: 1
+device_idx: [7]
 resume: False
-total_epochs: 3600
+total_epochs: 1200
 max_steps: 50
-batch_size: 5
-num_batch_per_learner: 4
-sequence_length: 8
-initial_learning_rate: 0.0005
-learning_rate_gamma: 0.2
+batch_size: 25
+num_batch_per_learner: 2
+sequence_length: 5
+initial_learning_rate: 0.00005
+learning_rate_gamma: 0.5
 learning_rate_step_size: 50
 epsilon_gamma: 0.99
 initial_epsilon: 1.0
 final_epsilon: 0.1
 epsilon_vanish_rate: 0.999
 performance_display_interval(epochs): 5
-checkpoint_save_interval(epochs): 5
+checkpoint_save_interval(epochs): 30
 actor_update_freq(epochs): 5
-target_update_freq(epochs): 20
+target_update_freq(epochs): 15
