--- a/Config/Train_local.yaml
+++ b/Config/Train_local.yaml
@@ -1,27 +1,24 @@
 env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers_Big_Rocks_No_Waiting_Time'
-checkpoint_to_load: "0_Checkpoint_Nav_Distributed_RL_BC_210"
+checkpoint_to_load: "0_360_Checkpoint_Nav_Distributed_RL_BC_25_2_5e-05_0.5_125"
 checkpoint_to_save: "Checkpoint_Nav_Distributed_RL_BC"
 name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider_BC"
-mode: "on_policy"
+mode: "off_policy"
 memory_size: 25
 device_idx: [0]
 resume: False
 total_epochs: 1200
 max_steps: 50
 batch_size: 25
-num_batch_per_learner: 1
-num_iter_per_batch: 4
-RL_gamma: 0.99
-lambd: 0.95
-clip_rate: 0.2
-sequence_length: 10
-initial_learning_rate: 0.0001
-learning_rate_gamma: 1
-learning_rate_step_size: 25
+num_batch_per_learner: 2
+sequence_length: 5
+initial_learning_rate: 0.00005
+learning_rate_gamma: 0.5
+learning_rate_step_size: 125
 epsilon_gamma: 0.99
 initial_epsilon: 1.0
 final_epsilon: 0.1
-epsilon_vanish_rate: 0.99
-performance_display_interval(epochs): 1
+epsilon_vanish_rate: 0.999
+performance_display_interval(epochs): 5
 checkpoint_save_interval(epochs): 30
-actor_update_freq(epochs): 1
+actor_update_freq(epochs): 5
+target_update_freq(epochs): 15
