--- a/Config/Train_local.yaml
+++ b/Config/Train_local.yaml
@@ -2,6 +2,7 @@ env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers_Bi
 checkpoint_to_load: "0_Checkpoint_Nav_Distributed_RL_BC_210"
 checkpoint_to_save: "Checkpoint_Nav_Distributed_RL_BC"
 name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider_BC"
+mode: "on_policy"
 memory_size: 1
 device_idx: [0]
 resume: False
@@ -9,6 +10,10 @@ total_epochs: 1200
 max_steps: 50
 batch_size: 25
 num_batch_per_learner: 2
+num_iter_per_batch: 4
+RL_gamma: 0.99
+lambd: 0.95
+clip_rate: 0.2
 sequence_length: 5
 initial_learning_rate: 0.00005
 learning_rate_gamma: 0.5
@@ -19,5 +24,5 @@ final_epsilon: 0.1
 epsilon_vanish_rate: 0.999
 performance_display_interval(epochs): 5
 checkpoint_save_interval(epochs): 30
-actor_update_freq(epochs): 5
+actor_update_freq(epochs): 1
 target_update_freq(epochs): 15
