--- a/Config/Train.yaml
+++ b/Config/Train.yaml
@@ -2,22 +2,26 @@ env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks_No_Waiting_Time'
 checkpoint_to_load: "0_Checkpoint_Nav_Distributed_RL_BC_210"
 checkpoint_to_save: "Checkpoint_Nav_Distributed_RL_BC"
 name_tensorboard: "CNN_LSTM_DQN_Nav_Distributed_RL_Hider_BC"
-memory_size: 1
+mode: "on_policy"
+memory_size: 25
 device_idx: [4]
 resume: False
 total_epochs: 1200
 max_steps: 50
 batch_size: 25
-num_batch_per_learner: 2
-sequence_length: 5
-initial_learning_rate: 0.00005
-learning_rate_gamma: 0.5
-learning_rate_step_size: 100
+num_batch_per_learner: 1
+num_iter_per_batch: 4
+RL_gamma: 0.99
+lambd: 0.95
+clip_rate: 0.2
+sequence_length: 10
+initial_learning_rate: 0.0001
+learning_rate_gamma: 1
+learning_rate_step_size: 25
 epsilon_gamma: 0.99
 initial_epsilon: 1.0
 final_epsilon: 0.1
-epsilon_vanish_rate: 0.999
-performance_display_interval(epochs): 5
+epsilon_vanish_rate: 0.99
+performance_display_interval(epochs): 1
 checkpoint_save_interval(epochs): 30
-actor_update_freq(epochs): 5
-target_update_freq(epochs): 15
+actor_update_freq(epochs): 1
