--- a/Config/Shell/Self_Play.conf
+++ b/Config/Shell/Self_Play.conf
@@ -1,8 +1,9 @@
 actor=true
 learner=true
 redis_server="localhost"
-num_actors=1
+num_actors=3
 num_learners=1
 device=-1
 human_play=false
 Train_config="Train.yaml"
+Method_config="DQN.yaml"
