Update config files to fit imitation learning

--- a/Config/Shell/Imitation_Learning.conf
+++ b/Config/Shell/Imitation_Learning.conf
@@ -7,3 +7,4 @@ device=-1
 human_play=true
 Train_config="Train_after_Human_Play.yaml"
 Train_human_play_config="Train.yaml"
+Method_config="BC.yaml"
