--- a/Config/Run/Human_Play_Local.yaml
+++ b/Config/Run/Human_Play_Local.yaml
@@ -1,4 +1,4 @@
-env_path: '../Env_Linux_Nav_3_Seekers_Big_Rocks_No_Waiting_Time'
+env_path: 'C:/Unity Projects/Hide and Seek/Environments/2.0/Env_Nav_3_Seekers_Big_Rocks_No_Waiting_Time_Random_Start_0'
 checkpoint_to_load: "Human_Play_Nav_FP_Demonstration_Random_Start"
 checkpoint_save_name: "Human_Play_Nav"
 total_episodes: 76
